# shiny-happiness

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  README.md  conftest.py  initial-prompt.md  project.yml  pyproject.toml
FinanceTracker 2.xcodeproj/: project.pbxproj
FinanceTracker.xcodeproj/: project.pbxproj
FinanceTracker/App/: AppContainer.swift  AppSchema.swift  FinanceTrackerApp.swift
FinanceTracker/Utilities/: AppDataResetService.swift  Date+Period.swift  Decimal+Money.swift  KeychainTokenStore.swift  Logger.swift  Persistence.swift  StoreFileResetService.swift
FinanceTrackerTests/EndToEndTests/: AccountDeletionServiceTests.swift  AppDataResetServiceTests.swift  BackupArchiveTests.swift  CategoryManagementActionsTests.swift  CategoryManagementViewStateTests.swift  DashboardInsightBuilderTests.swift  DashboardPeriodFilteringTests.swift  DashboardSnapshotTests.swift  EndToEndPDFTests.swift  HouseholdInclusionTests.swift  HouseholdSettlementPresenterTests.swift  HouseholdSettlementReportTests.swift  ManualLedgerTests.swift  NetWorthCompositionTests.swift  OpenbankMultiAccountTests.swift  PaymentMetadataTests.swift  PortfolioPriceRefresherTests.swift  PortfolioResolverTests.swift  PortfolioServiceTests.swift  RetirementDashboardTests.swift  StatementBalanceTests.swift
docs/: LOOPS.md
samples/: 2026-05-08_HSBC_2Now_paste.txt  2026-05-08_HSBC_2Now_paste_accountB.txt
specs/: backlog.md  credit-cards.md  household-settlement-allocations.md  liquid-glass-redesign.md  next-stages.md  release-checklist.md  stocks-portfolio-HANDOFF.md  stocks-portfolio-plan.md  stocks-portfolio.md
(+179 files in other folders)
